--- a/src/app/modules/sandbox/stats/event/eventStats.html
+++ b/src/app/modules/sandbox/stats/event/eventStats.html
@@ -112,33 +112,25 @@
                 
                 <div class="col l3 m6 s12">
                     <stats-efficiency bind-to-id="gaugeEfficiencyGlobal" 
-                        owners-id="ownersId" label="efficiencyTotal"
-                        start-date="collecte.startDate" end-date="collecte.endDate"
-                        padding="25">
+                        label="efficiencyTotal" padding="25">
                     </stats-efficiency>
                 </div>
                 
                 <div class="col l3 m6 s12">
                     <stats-efficiency bind-to-id="gaugeEfficiency9m" 
-                        owners-id="ownersId" label="efficiency9m"
-                        start-date="collecte.startDate" end-date="collecte.endDate"
-                        values="values9m" padding="25">
+                        label="efficiency9m" values="values9m" padding="25">
                     </stats-efficiency>
                 </div>
                 
                 <div class="col l3 m6 s12">
                     <stats-efficiency bind-to-id="gaugeEfficiency6m" 
-                        owners-id="ownersId" label="efficiency6m"
-                        start-date="collecte.startDate" end-date="collecte.endDate"
-                        values="values6m" padding="25">
+                        label="efficiency6m" values="values6m" padding="25">
                     </stats-efficiency>
                 </div>
                 
                 <div class="col l3 m6 s12">
                     <stats-efficiency bind-to-id="gaugeEfficiency7m" 
-                        owners-id="ownersId" label="efficiency7m"
-                        start-date="collecte.startDate" end-date="collecte.endDate"
-                        values="values7m" padding="25">
+                        label="efficiency7m" values="values7m" padding="25">
                     </stats-efficiency>
                 </div>
             </div>
