--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -174,10 +174,13 @@
                 </div>
             </div>
 
-            <div class="modal-footer">
-                <button type="submit" class="waves-effect waves-red btn teal" translate="popup.buttons.submit"></button>
-                <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'popup.buttons.cancel' |
-                    translate}}</a>
+            <div class="row center">
+                <div class="col s12">
+                    <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
+                       translate="commons.buttons.cancel"></a>
+                    <button type="submit" class="btn waves-effect waves-red  green darken-1"
+                            translate="commons.buttons.validate"/>
+                </div>
             </div>
         </form>
     </div>
