--- a/src/app/modules/sandbox/agenda/writeEvent.html
+++ b/src/app/modules/sandbox/agenda/writeEvent.html
@@ -33,7 +33,8 @@
                             <label>{{'eventLabels.StartDate' | translate }} <span class="red-text text-lighten-1">*</span></label>
                         </div>
                         <div class="input-field col s8">
-                            <input id="EventStartDate" class="datepicker" name="EventStartDate" type="text" ng-model="startDate" required/>
+
+                            <input id="EventStartDate" name="EventStartDate" type="text" class="datepicker" ng-model="startDate" required/>
                         </div>
 
                         <div class="input-field col s4">
