--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="input-field col m12 s6">
                                     <div class="hide-on-med-and-down"><br/></div>
-                                    <input ng-model="player.birthdate" id="playerBirthdate" type="date" class="validate" required>
+                                    <input id="playerBirthdate" class="datepicker" name="playerBirthdate" type="text" ng-model="player.birthdate" required/>
                                 </div>
                             </div>
                         </div>
