--- a/src/app/modules/sandbox/stats/player/playerStats.html
+++ b/src/app/modules/sandbox/stats/player/playerStats.html
@@ -174,6 +174,12 @@
             <div class="row">
                 
                 <div class="col s12 m12 l4">
+                    <stats-goals bind-to-id="goalScored" 
+                                 label="goalScored" 
+                                 sandbox-id="meta.sandbox._id">
+                    </stats-goals>
+                </div>
+                <div class="col s12 m12 l4">
                     <div class="card small light-green lighten-1 blue-grey-text text-darken-2">
                         <div class="card-title grey-text text-lighten-4 center">
                             <span class="white-text"><h5><small>{{'stats.resumeTab.goal' | translate }}</small></h5></span>
