--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -167,47 +167,17 @@
             <div class="row">
                 
                 <div class="col s12 m12 l4">
-                    <div class="card small light-green lighten-1 blue-grey-text text-darken-2">
-                        <div class="card-title grey-text text-lighten-4 center">
-                            <span class="white-text"><h5><small>{{'stats.resumeTab.goalScored' | translate }}</small></h5></span>
-                        </div>
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img src="/assets/images/handball/ballon-filet.jpeg">
-                        </div>
-                        
-                        <div class="card-content light-green lighten-1">
-                            <div class="row center">
-                                <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
-                                <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
-                                <div class="col s4"><h6>{{'stats.resumeTab.frequence' | translate }}</h6></div>
-                                <div class="col s4 light-green darken-2 white-text "><h6>{{stats['goalScored'].count}}</h6></div>
-                                <div class="col s4 light-green darken-1 white-text "><h6>{{stats['goalScored'].count/teamCollecte.nbGame | number : 2}}</h6></div>
-                                <div class="col s4 light-green darken-2 white-text "><h6>{{teamCollecte.totalTime/60/stats['goalScored'].count | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
-                            </div>
-                        </div>
-                    </div>
+                    <stats-goals bind-to-id="goalScored" 
+                                 label="goalScored" 
+                                 sandbox-id="meta.sandbox._id">
+                    </stats-goals>
                 </div>
                 <div class="col s12 hide-on-large-only"><br/></div>
                 <div class="col s12 m12 l4">
-                    <div class="card small red lighten-1 white-text">
-                        <div class="card-title center">
-                            <span class="white-text"><h5><small>{{'stats.resumeTab.goalConceded' | translate }}</small></h5></span>
-                        </div>
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img src="/assets/images/handball/ballon-fillet.jpeg">
-                        </div>
-                        
-                        <div class="card-content red lighten-1">
-                            <div class="row center">
-                                <div class="col s4"><h6>{{'stats.resumeTab.goal' | translate }}</h6></div>
-                                <div class="col s4"><h6>{{'stats.resumeTab.goalAvgLight' | translate }}</h6></div>
-                                <div class="col s4"><h6>{{'stats.resumeTab.frequence' | translate }}</h6></div>
-                                <div class="col s4 red darken-2 white-text "><h6>{{stats['goalConceded'].count}}</h6></div>
-                                <div class="col s4 red lighten-2 white-text "><h6>{{stats['goalConceded'].count/teamCollecte.nbGame | number : 2}}</h6></div>
-                                <div class="col s4 red darken-2 white-text "><h6>{{teamCollecte.totalTime/60/stats['goalConceded'].count | number : 0}} {{'stats.resumeTab.minute' | translate }}</h6></div>
-                            </div>
-                        </div>
-                    </div>        
+                    <stats-goals bind-to-id="goalConceded" 
+                                 label="goalConceded" 
+                                 sandbox-id="meta.sandbox._id">
+                    </stats-goals>
                 </div>
                 <div class="col s12 hide-on-large-only"><br/></div>
                 <div class="col s12 m12 l4">
@@ -269,6 +239,7 @@
             </div>
             <!-- Stats shoot efficiency end -->
             
+            <!-- Stats actions pos/neg Start -->
             <div class="row">    
                 <div class="col l6 s12">
                     <div class="card blue-grey darken-2">
@@ -298,6 +269,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Stats actions pos/neg end -->
+            
+            <!-- Stats participant's list Start -->
             <div class="row grey lighten-2">
                 <div class="col s12" ng-if="collectes.length > 0">
                     <div><h5 class="blue-grey-text text-darken-1"><i class="fa fa-bar-chart"></i> {{'stats.teamLabels.listCollect' | translate }}</h5></div>
@@ -354,6 +328,7 @@
                     </ul>
                 </div>
             </div>
+            <!-- Stats participant's list Start -->
         </div>
     </div>
 </div>
